Refactor: remove duplicated session on historical timetable excel file